--- a/css/bootstrap-custom-apim.css
+++ b/css/bootstrap-custom-apim.css
@@ -171,7 +171,7 @@ a.navbar-brand:hover {
 }
 
 .table tr th {
-	font-weight: 500;
+	font-weight: 300;
 	font-size:14px;
 	text-transform: uppercase;
 }
@@ -187,10 +187,14 @@ a.navbar-brand:hover {
 }
 
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
-	padding: 8px;
+    padding:5px;
 	line-height: 1.42857143;
 	vertical-align: top;
 	border-top: 0px solid #ddd;
+}
+
+.table tr th.t-right, .table tr td.t-right  {
+    text-align:right;
 }
 
 /* input */
@@ -226,14 +230,45 @@ a.navbar-brand:hover {
 }
 
 /* icon buttons */
-.cu-btn {
-	display:inline-block;
+.cu-reg-btn {
+    color:#333;
+    text-decoration: none;
+    border:0px solid #ff0000;
+    padding:12px 10px 12px 38px;
+    font-size:14px;
+    margin:0 0 0 0px;
+    font-weight:100;
+    display:inline-block;   
+    text-transform: uppercase;
+    background-size: 26px 26px;
+}
+
+.cu-reg-btn:hover {
+    background-color:#e4e4e4;
+    text-decoration: none;
 }
 
 .btn-edit {
-	background:url('../images/btn0');
+    background:url('../img/ico-edit.png') 0.6em 0.6em no-repeat;
 }
 
 .btn-delete {
+    background:url('../img/ico-delete.png') 0.6em 0.6em no-repeat;	
+}
+
+@media only screen 
+and (min-width : 768px) 
+and (max-width : 1200px) { 
+    
+    .cu-reg-btn span {
+        width:1px;
+        height:1px ;
+        overflow: hidden;
+        display:inline-block;
+    }
+
+    a.cu-reg-btn {
+        /* padding: 18px 10px 18px 38px; */
+    }
 
 }
