--- a/css/bootstrap-custom-apim.css
+++ b/css/bootstrap-custom-apim.css
@@ -136,8 +136,8 @@
 
 
 .navbar-default {
-	background-color: #6b94f1;
-	border-color: #6b94f1;
+	background-color: #3261c0;
+	border-color: #3261c0;
 }
 
 html, body {
@@ -227,6 +227,86 @@ a.navbar-brand:hover {
 .control-label {
 	font-weight:400;
 	margin-bottom:5px;	
+}
+
+.label {
+    display: inline;
+    padding: .4em .6em .3em;
+    font-size: 12px;
+    font-weight: 100;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0px;
+} 
+
+.btn {
+    display: inline-block;
+    padding: 10px 18px;
+    margin-bottom: 0;
+    font-size: 12px;
+    font-weight: normal;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 0px;
+    text-transform: uppercase;
+}
+
+.btn-default {
+    border:1px solid #f0f0f0;
+}
+
+.alert {
+    border-radius: 0px;
+    border:0px solid #fff;
+}
+
+.alert-info {
+    color: #31708f;
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+}
+
+.status_w {
+    width:130px !important; 
+    display: block; 
+    padding: 6px;
+    text-transform:uppercase;
+}
+
+/* custom */
+.logo {
+    margin-right:10px;
+}
+
+a.navbar-brand {
+    font-size:22px;
+    font-weight: 100;
+}
+
+.navbar-brand {
+    float: left;
+    height: 50px;
+    padding: 15px 15px 0px 20px;
+    font-size: 18px;
+    line-height: 20px;
+}
+
+.navbar-brand img {
+    float:left;
 }
 
 /* icon buttons */
