--- a/css/bootstrap-custom-apim.css
+++ b/css/bootstrap-custom-apim.css
@@ -269,6 +269,13 @@ a.navbar-brand:hover {
     border:1px solid #f0f0f0;
 }
 
+.btn-combined {
+    padding:8px 10px 7px 10px;
+    background:#999;
+    color:#fff;
+    border:1px solid #999;
+}
+
 .alert {
     border-radius: 0px;
     border:0px solid #fff;
